--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/react-helmet": "5.0.16",
     "@types/styled-components": "5.0.1",
     "esm": "^3.2.25",
+    "gatsby-plugin-webpack-bundle-analyzer": "^1.0.5",
     "lodash": "^4.17.15",
     "prettier": "^2.0.5",
     "write": "^2.0.0"
